这里是换了酷狗api的

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html class=H><head><meta charset=utf-8><title>橙子音乐</title><meta name=keywords content=橙子音乐，易子程><meta name=description content=这是一个H5的音乐播放器><meta name=Author content=易子程><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0"><link rel="shortcut icon" href=./src/assets/orange.ico type=image/x-icon><style>body{
+<!DOCTYPE html><html class=H><head><meta charset=utf-8><title>橙子音乐</title><meta name=keywords content=橙子音乐，易子程><meta name=description content=这是一个H5的音乐播放器><meta name=Author content=易子程><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><link rel="shortcut icon" href=./src/assets/logo.ico type=image/x-icon><link rel=apple-touch-icon href=./src/assets/player_logo.png><link rel=apple-touch-icon-precomposed href=./src/assets/player_logo.png><style>body{
         margin-top: 0;
         margin-left: 0;
       }
@@ -7,4 +7,4 @@
       }
       .H body {
         height: 100%;
-      }</style><link href=/static/css/app.30f4255ea469d246478b30d5595e546e.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.246795d6b32a735ffe74.js></script><script type=text/javascript src=/static/js/vendor.396f0ce6389dc4a37ba4.js></script><script type=text/javascript src=/static/js/app.963b1e6a2103cfe67437.js></script></body></html>
+      }</style><link href=/static/css/app.0238a3c01d26548d949025776c8ed680.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.885d16475233a90b2c8d.js></script><script type=text/javascript src=/static/js/vendor.396f0ce6389dc4a37ba4.js></script><script type=text/javascript src=/static/js/app.52cc3f6fd65f1fd48b05.js></script></body></html>
