增加了ios微信的自动播放

--- a/public/index.html
+++ b/public/index.html
@@ -7,4 +7,4 @@
       }
       .H body {
         height: 100%;
-      }</style><link href=/static/css/app.4ed4911b71621351319414fd265fe308.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.33bd08c20d4e8097dbd6.js></script><script type=text/javascript src=/static/js/vendor.396f0ce6389dc4a37ba4.js></script><script type=text/javascript src=/static/js/app.47850cb2a97eed57f081.js></script></body></html>
+      }</style><script src=http://res.wx.qq.com/open/js/jweixin-1.0.0.js></script><link href=/static/css/app.4ed4911b71621351319414fd265fe308.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2158a342dd54df42e27b.js></script><script type=text/javascript src=/static/js/vendor.396f0ce6389dc4a37ba4.js></script><script type=text/javascript src=/static/js/app.8ebbc095e16cf5df90f3.js></script></body></html>
