--- a/public/index.html
+++ b/public/index.html
@@ -7,4 +7,4 @@
       }
       .H body {
         height: 100%;
-      }</style><script src=http://res.wx.qq.com/open/js/jweixin-1.0.0.js></script><link href=/static/css/app.b61fe453c786128323e30977924724de.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.9180bb885a1c9ea0867f.js></script><script type=text/javascript src=/static/js/vendor.396f0ce6389dc4a37ba4.js></script><script type=text/javascript src=/static/js/app.786e80204d22cbb6af1c.js></script></body></html>
+      }</style><script src=http://res.wx.qq.com/open/js/jweixin-1.0.0.js></script><link href=//musiccdn.yizicheng.cn/static/css/app.30296a33dbcba957e2ebc77f3e102d67.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=//musiccdn.yizicheng.cn/static/js/manifest.07b260570f608b89cb5b.js></script><script type=text/javascript src=//musiccdn.yizicheng.cn/static/js/vendor.396f0ce6389dc4a37ba4.js></script><script type=text/javascript src=//musiccdn.yizicheng.cn/static/js/app.b91059e1ec7c77a5a4ef.js></script></body></html>
